<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat_24"
            android:title="@string/menu_chats" />
    </group>

    <item android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_backup_24"
                android:title="@string/menu_backup" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>