<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chats">

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.securechat.android.ui.chat.ChatListFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chat_list">
        <action
            android:id="@+id/action_nav_chats_to_chat_detail"
            app:destination="@id/nav_chat_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_chat_detail"
        android:name="com.securechat.android.ui.chat.ChatDetailFragment"
        android:label="@string/chat_detail"
        tools:layout="@layout/fragment_chat_detail">
        <argument
            android:name="chatId"
            app:argType="string" />
        <argument
            android:name="participantHandle"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.securechat.android.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>